objects/Order_Line_Item_Details__c.object
<CustomObject>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <referenceTo>Order_Header__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Handling_Fee__c</fullName>
        <description>Shipping &amp; Handling Fee</description>
        <inlineHelpText>Shipping &amp; Handling Fee</inlineHelpText>
        <label>Shipping &amp; Handling Fee</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_ID_Case_Safe__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor ID (Case Safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Price__c</fullName>
        <label>Vendor Price</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Order Line Item Details</label>
    <nameField>
        <label>Order Line Item Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Items Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>